# IRL-SFV

./: .gitignore  .pdm-python  LICENSE.md  README.md  pyproject.toml  requirements.txt
agents/: bc.py  gaifo_td3.py  gaifo_td7.py  mm_td3.py  mm_td7.py  sfm_adversarial.py  sfm_sac.py  sfm_sac_K.py  sfm_td3.py  sfm_td7.py  sfm_td7_1.py  sfm_td7_adv.py  sfm_td7_org.py
common/: base_features.py  buffer.py  utils.py
envs/: dmc.py  environments.py
envs/custom_dmc_tasks/: __init__.py  dmc.py
expert/: collect_demos.py
expert/cheetah_run/: trajectory-0.pkl  trajectory-1.pkl  trajectory-11.pkl  trajectory-2.pkl  trajectory-3.pkl  trajectory-4.pkl  trajectory-5.pkl  trajectory-6.pkl  trajectory-7.pkl  trajectory-8.pkl  trajectory-9.pkl  trajectory-records.csv
expert/cheetah_walk/: trajectory-0.pkl  trajectory-1.pkl  trajectory-2.pkl  trajectory-3.pkl  trajectory-4.pkl  trajectory-5.pkl  trajectory-6.pkl  trajectory-7.pkl  trajectory-8.pkl  trajectory-9.pkl  trajectory-records.csv
expert/quadruped_jump/: trajectory-0.pkl  trajectory-1.pkl  trajectory-2.pkl  trajectory-3.pkl  trajectory-4.pkl  trajectory-5.pkl  trajectory-6.pkl  trajectory-7.pkl  trajectory-8.pkl  trajectory-9.pkl  trajectory-records.csv
expert/quadruped_run/: trajectory-0.pkl  trajectory-1.pkl  trajectory-2.pkl  trajectory-3.pkl  trajectory-4.pkl  trajectory-5.pkl  trajectory-6.pkl  trajectory-7.pkl  trajectory-8.pkl  trajectory-9.pkl  trajectory-records.csv
expert/quadruped_stand/: trajectory-0.pkl  trajectory-1.pkl  trajectory-2.pkl  trajectory-3.pkl  trajectory-4.pkl  trajectory-5.pkl  trajectory-6.pkl  trajectory-7.pkl  trajectory-8.pkl  trajectory-9.pkl  trajectory-records.csv
expert/quadruped_walk/: trajectory-0.pkl  trajectory-1.pkl  trajectory-2.pkl  trajectory-3.pkl  trajectory-4.pkl  trajectory-5.pkl  trajectory-6.pkl  trajectory-7.pkl  trajectory-8.pkl  trajectory-9.pkl  trajectory-records.csv
expert/walker_flip/: trajectory-0.pkl  trajectory-1.pkl  trajectory-2.pkl  trajectory-3.pkl  trajectory-4.pkl  trajectory-5.pkl  trajectory-6.pkl  trajectory-7.pkl  trajectory-8.pkl  trajectory-9.pkl  trajectory-records.csv
expert/walker_run/: trajectory-0.pkl  trajectory-1.pkl  trajectory-2.pkl  trajectory-3.pkl  trajectory-4.pkl  trajectory-5.pkl  trajectory-6.pkl  trajectory-7.pkl  trajectory-8.pkl  trajectory-9.pkl  trajectory-records.csv
expert/walker_stand/: trajectory-0.pkl  trajectory-1.pkl  trajectory-2.pkl  trajectory-3.pkl  trajectory-4.pkl  trajectory-5.pkl  trajectory-6.pkl  trajectory-7.pkl  trajectory-8.pkl  trajectory-9.pkl  trajectory-records.csv
fastenv/: pyvenv.cfg
fastenv/Scripts/: activate  (+1 more)
wandb/: latest-run
(+55 files in other folders)
