[project]
name = "imitation-learning"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "arnavkj1995", email = "arnavkj95@gmail.com"},
]
dependencies = [
    "chex>=0.1.86",
    "hydra-core==1.3.1",
    "omegaconf>=2.3.0",
    "wandb[importers]>=0.17.0",
    "tqdm>=4.66.4",
    "flax>=0.8.3",
    "tensorflow-datasets>=4.9.4",
    "tensorflow-cpu==2.15.0",  # Replaces tensorflow
    "tensorflow-probability==0.24.0",
    "jax==0.4.28",
    "jaxlib==0.4.28",
    "jax-dataloader>=0.1.0",
    "einops>=0.8.0",
    "python-dotenv>=1.0.1",
    "ipdb>=0.13.13",
    "pandas>=2.2.2",
    "seaborn>=0.13.2",
    "frozendict>=2.4.4",
    "dm-env>=1.6",
    "dm-control>=1.0.19",
    "flashbax>=0.1.2",
    "tyro>=0.8.5",
    "opencv-python>=4.10.0.84",
    "setuptools==66",
    "gym==0.23.0",
    "stable-baselines3>=1.2.0",
    "sbx-rl>=0.17.0",
    "shimmy[dm-control]>=1.3.0",
    # Optional: include rliable after everything installs
    # "rliable @ git+https://github.com/google-research/rliable",
]
requires-python = ">=3.10,<3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.resolution.overrides]
Cython = "<3.0"

[tool.pdm]
distribution = false
